force-app/main/default/objects/HRCSVC20_CQ_Original_Values__c/HRCSVC20_CQ_Original_Values__c.object-meta.xml
<CustomObject>
    <description>SE-2620 - CQs for Translation, This object is used to review the qualified CQs for translation, so that only translated information can sync over to EtQ</description>
    <label>CQ_Original_Values</label>
    <nameField>
        <label>CQ_Original_Values__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CQ_Original_Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>