force-app/main/default/objects/HRCSVC20_CQ_Original_Values__c/fields/CQ_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CQ_External_Id__c</fullName>
    <description>SE-2620 - External Id to store combination of Parent CQ Name + Field API Name</description>
    <externalId>true</externalId>
    <label>CQ_External_Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>