force-app/main/default/objects/HRCSVC20_CQ_Original_Values__c/fields/HRCSVC20_CQ__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_CQ__c</fullName>
    <description>SE-2620 - Detail to Complaint Qualifications Master Object (Service Cloud 2.1)</description>
    <label>CQ</label>
    <referenceTo>HRCSVC_Complaint_Qualification__c</referenceTo>
    <relationshipLabel>CQ_Original_Values</relationshipLabel>
    <relationshipName>CQ_Original_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>