force-app/main/default/objects/HRCSVC20_CQ_Original_Values__c/fields/HRCSVC20_CQ_API_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_CQ_API_Name__c</fullName>
    <label>CQ API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>