force-app/main/default/objects/HRCSVC20_CQ_Original_Values__c/fields/HRCSVC20_CQ_Key__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_CQ_Key__c</fullName>
    <description>SE-2620 - Key of Field Label whose value needs to be captured for Translation (Service Cloud 2.1)</description>
    <label>CQ_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>