force-app/main/default/objects/HRCSVC20_CQ_Original_Values__c/fields/HRCSVC21_CQ_Translation__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_CQ_Translation__c</fullName>
    <label>CQ Translation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>