force-app/main/default/objects/HRCSVC20_CQ_Original_Values__c/recordTypes/HRCSVC21_CQ_Original.recordType-meta.xml
<RecordType>
    <fullName>HRCSVC21_CQ_Original</fullName>
    <active>true</active>
    <description>SE-2620</description>
    <label>CQ Original</label>
</RecordType>